--- a/STM32N6570-DK.ioc
+++ b/STM32N6570-DK.ioc
@@ -255,8 +255,8 @@ Mcu.ThirdParty0_Instance=STMicroelectronics.X-CUBE-TOUCHGFX.4.25.0_Appli
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
 Mcu.UserName=STM32N657X0HxQ
-MxCube.Version=6.14.0
-MxDb.Version=DB.6.0.140
+MxCube.Version=6.14.1
+MxDb.Version=DB.6.0.141
 NVIC.BFHFNMINS=0
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -696,7 +696,7 @@ RCC.CKPERFreq_Value=64000000
 RCC.CPUCLKSource=RCC_CPUCLKSOURCE_IC1
 RCC.CortexFreq_Value=100000000
 RCC.CpuClockFreq_Value=800000000
-RCC.DCMIPPFreq_Value=0
+RCC.DCMIPPFreq_Value=200000000
 RCC.ETH1Freq_Value=200000000
 RCC.FBDIV1=100
 RCC.FBDIV2=100
@@ -1521,3 +1521,4 @@ XSPI2.IPParameters=FifoThresholdByte,MemoryType,MemorySize,ChipSelectHighTimeCyc
 XSPI2.MemorySize=HAL_XSPI_SIZE_1GB
 XSPI2.MemoryType=HAL_XSPI_MEMTYPE_MACRONIX
 board=custom
+isbadioc=false
